[package]
name = "crunch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tensorflow = { version = "0.17.0", features = ["tensorflow_gpu"] }
image = "0.23"
serde = { version = "1.0", features = ["derive"] }
clap = "3.0.0-beta.2"
